--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css" />
   <title>Omnifood</title>
 </head>
@@ -20,7 +23,8 @@
         <a href="#" class="btn btn--outline">Learn more &darr;</a>
       </div>
       <div class="hero-img-box">
-        <img src="img/hero.png" class="hero-img" alt="Woman enjoying food, meals in storage container and food bowls on a table" />
+        <img src="img/hero.png" class="hero-img"
+          alt="Woman enjoying food, meals in storage container and food bowls on a table" />
       </div>
     </div>
   </section>
