--- a/index.html
+++ b/index.html
@@ -12,6 +12,16 @@
     />
     <link rel="stylesheet" href="css/general.css" />
     <link rel="stylesheet" href="css/style.css" />
+
+    <script
+      type="module"
+      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"
+    ></script>
+    <script
+      nomodule
+      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"
+    ></script>
+
     <title>Omnifood</title>
   </head>
 
@@ -177,9 +187,18 @@
             <span class="tag">Vegetarian</span>
             <p class="meal-title">Japanese Gyozas</p>
             <ul class="meal-attributes">
-              <li class="meal-attribute">650 calories</li>
-              <li class="meal-attribute">NutriScore &reg; 74</li>
-              <li class="meal-attribute">4.9 rating (537)</li>
+              <li class="meal-attribute">
+                <ion-icon name="flame-outline"></ion-icon>
+                <span>650 calories</span>
+              </li>
+              <li class="meal-attribute">
+                <ion-icon name="restaurant-outline"></ion-icon>
+                <span>NutriScore &reg; 74</span>
+              </li>
+              <li class="meal-attribute">
+                <ion-icon name="star-outline"></ion-icon>
+                <span>4.9 rating (537)</span>
+              </li>
             </ul>
           </div>
           <div class="meal">Meals</div>
