--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
       </section>
 
       <section class="section-meals">
-        <div class="container">
+        <div class="container center-text">
           <span class="subheading">Meals</span>
           <h2 class="heading-secondary">
             Omnifood AI chooses from 5,000+ recipes
