style: add some styles to price section

--- a/index.html
+++ b/index.html
@@ -432,9 +432,11 @@
 
         <div class="container grid grid--2-cols">
           <div class="pricing-plan">
-            <p class="plan-name">Starter</p>
-            <p class="plan-price"><span>$</span>399</p>
-            <p class="plan-text">per month. That's just $13 per meal!</p>
+            <header class="plan-header">
+              <p class="plan-name">Starter</p>
+              <p class="plan-price"><span>$</span>399</p>
+              <p class="plan-text">per month. That's just $13 per meal!</p>
+            </header>
             <ul class="list">
               <li class="list-item">
                 <ion-icon class="list-icon" name="checkmark-outline"></ion-icon
@@ -449,15 +451,19 @@
                 ><span>Delivery is free</span>
               </li>
             </ul>
-            <a href="#" class="btn btn--full margin-right-sm"
-              >Start eating well</a
-            >
+            <div class="plan-sign-up">
+              <a href="#" class="btn btn--full margin-right-sm"
+                >Start eating well</a
+              >
+            </div>
           </div>
 
           <div class="pricing-plan">
-            <p class="plan-name">Complete</p>
-            <p class="plan-price"><span>$</span>649</p>
-            <p class="plan-text">per month. That's just $11 per meal!</p>
+            <header class="plan-header">
+              <p class="plan-name">Complete</p>
+              <p class="plan-price"><span>$</span>649</p>
+              <p class="plan-text">per month. That's just $11 per meal!</p>
+            </header>
             <ul class="list">
               <li class="list-item">
                 <ion-icon class="list-icon" name="checkmark-outline"></ion-icon
@@ -476,9 +482,11 @@
                 ><span>Get access to latest recipes</span>
               </li>
             </ul>
-            <a href="#" class="btn btn--full margin-right-sm"
-              >Start eating well</a
-            >
+            <div class="plan-sign-up">
+              <a href="#" class="btn btn--full margin-right-sm"
+                >Start eating well</a
+              >
+            </div>
           </div>
         </div>
       </section>
