--- a/index.html
+++ b/index.html
@@ -444,11 +444,14 @@
               </li>
               <li class="list-item">
                 <ion-icon class="list-icon" name="checkmark-outline"></ion-icon
-                ><span>Order times are between 11am and 9pm</span>
+                ><span>Order from 11am to 9pm</span>
               </li>
               <li class="list-item">
                 <ion-icon class="list-icon" name="checkmark-outline"></ion-icon
                 ><span>Delivery is free</span>
+              </li>
+              <li class="list-item">
+                <ion-icon class="list-icon" name="close-outline"></ion-icon>
               </li>
             </ul>
             <div class="plan-sign-up">
@@ -458,7 +461,7 @@
             </div>
           </div>
 
-          <div class="pricing-plan">
+          <div class="pricing-plan pricing-plan--complete">
             <header class="plan-header">
               <p class="plan-name">Complete</p>
               <p class="plan-price"><span>$</span>649</p>
