--- a/index.html
+++ b/index.html
@@ -470,11 +470,11 @@
             <ul class="list">
               <li class="list-item">
                 <ion-icon class="list-icon" name="checkmark-outline"></ion-icon
-                ><span>2 meals per day</span>
+                ><span><strong>2 meals</strong> per day</span>
               </li>
               <li class="list-item">
                 <ion-icon class="list-icon" name="checkmark-outline"></ion-icon
-                ><span>Order 24/7</span>
+                ><span>Order <strong>24/7</strong></span>
               </li>
               <li class="list-item">
                 <ion-icon class="list-icon" name="checkmark-outline"></ion-icon
