--- a/index.html
+++ b/index.html
@@ -503,7 +503,7 @@
             </p>
           </div>
           <div class="feature">
-            <ion-icon class="feature-icon" name="infinite-outline"></ion-icon>
+            <ion-icon class="feature-icon" name="nutrition-outline"></ion-icon>
             <p class="feature-title">Local and organic</p>
             <p class="feature-text">
               Our cooks only use local, fresh, and organic products to prepare
@@ -511,7 +511,7 @@
             </p>
           </div>
           <div class="feature">
-            <ion-icon class="feature-icon" name="infinite-outline"></ion-icon>
+            <ion-icon class="feature-icon" name="leaf-outline"></ion-icon>
             <p class="feature-title">No waste</p>
             <p class="feature-text">
               All our partners only use reusable containers to package all your
@@ -519,7 +519,7 @@
             </p>
           </div>
           <div class="feature">
-            <ion-icon class="feature-icon" name="infinite-outline"></ion-icon>
+            <ion-icon class="feature-icon" name="pause-outline"></ion-icon>
             <p class="feature-title">Pause anytime</p>
             <p class="feature-text">
               Going on vacation? Just pause your subscription, and we refund
