--- a/index.html
+++ b/index.html
@@ -590,5 +590,15 @@
         </div>
       </section>
     </main>
+
+    <footer class="footer">
+      <div class="container grid grid--5-cols">
+        <div class="logo-col">Logo</div>
+        <div class="address-col">Address</div>
+        <nav class="nav-col">Nav 1</nav>
+        <nav class="nav-col">Nav 2</nav>
+        <nav class="nav-col">Nav 3</nav>
+      </div>
+    </footer>
   </body>
 </html>
