--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             </h1>
             <p class="hero-description">
               The smart 365-days-per-year food subscription that will make you
-              ear healthy again. Tailored to your personal tastes and
+              eat healthy again. Tailored to your personal tastes and
               nutritional needs.
             </p>
             <a href="#" class="btn btn--full margin-right-sm"
