feat: add queries at <704px breakpoint
basically for smaller tablets

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   </head>
 
   <body>
-    <header class="header nav-open">
+    <header class="header">
       <a href="#">
         <img src="img/omnifood-logo.png" alt="Omnifood logo" class="logo" />
       </a>
@@ -249,7 +249,7 @@
             </div>
           </div>
 
-          <div class="list">
+          <div class="diets">
             <h3 class="heading-tertiary">Works with any diet:</h3>
             <ul class="list">
               <li class="list-item">
