--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
       src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"
     ></script>
 
+    <script defer src="js/script.js"></script>
+
     <title>Omnifood</title>
   </head>
 
@@ -626,7 +628,8 @@
           </ul>
 
           <p class="copyright">
-            Copyright &copy; 2027 by Omnifood, Inc. All rights reserved
+            Copyright &copy; <span class="year">2027</span> by Omnifood, Inc.
+            All rights reserved
           </p>
         </div>
         <div class="address-col">
